kubernetes/arr/04-qbittorrent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      containers:
        - name: gluetun
          image: ghcr.io/qdm12/gluetun:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN # required to create WireGuard interface and manage iptables kill switch
          volumeMounts:
            - name: tun-device
              mountPath: /dev/net/tun

        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - name: webui
              containerPort: 8081
              protocol: TCP
            - name: torrent-tcp
              containerPort: 6881
              protocol: TCP
            - name: torrent-udp
              containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data

      volumes:
        - name: tun-device
          hostPath:
            path: /dev/net/tun
            type: CharDevice # K8s has no devices: field like Docker. hostPath with CharDevice is the equivalent of Docker's devices: - /dev/net/tun:/dev/net/tun
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: arr-data-pvc
